<resources>
    <string name="app_name">work timer</string>
    <string name="selected">selected</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="copy">copy</string>
    <string name="search">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="set_preview">set preview</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="finish">finish</string>
    <string name="timer_exit_confirmation">exit and stop the timer?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="exit">exit</string>
    <string name="timer_started">timer is started</string>
    <string name="rest">rest</string>
    <string name="training">training</string>
    <string name="new_action">"new action: "</string>
    <string name="current_action">current action</string>
    <string name="editing">editing</string>
    <string name="creating">creating</string>
    <string name="action">action</string>
    <string name="name">name</string>
    <string name="exact_time">exact time</string>
    <string name="choose_color">Choose color</string>
    <string name="apply">apply</string>
    <string name="timer_name">timer name</string>
    <string name="symbols">symbols</string>
    <string name="empty_name">empty name</string>
    <string name="name_sort">sort by name</string>
    <string name="open_sort">sort by opens order</string>
    <string name="delete_set">delete set?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>